Fix viewport on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,10 @@ body {
   font-family: Poppins;
 }
 
+body {
+  position: absolute;
+}
+
 a {
   color: inherit;
   text-decoration: none;
